syntax = "proto3";
package serverMessageSystem;

enum RulesType
{
    Automatic = 0;
    Manual = 1;
}

message Base
{
    uint32 messageID = 1;
}

message TimeSettings
{
    uint32 totalTimeToMove = 1;
    uint32 timeToThink = 2;
    uint32 timeForOpponentsDecision = 3;
    uint32 diplomacyTime = 4;
}

message GameType
{
    bool hasAddonWildAxe = 1;
    bool hasAddonClericalErrors = 2;
    RulesType rulesType = 3;
}

message GameSettings
{
    GameType gameType = 1;
    TimeSettings timeSettings = 2;
}

//Initial message from client while connecting
//to the server at the first time.
//No necessity to set the "gameType" field if default settings
//are provided

enum GameCreationRequest
{
    JoinTheGame = 0;
    CreateTheGame = 1;
}

message RoomCreationErrors
{
    bool noFreeSlotsAvailable = 1;
    bool rulesAreNotSupported = 2;
    bool incorrectSettings = 3;
}

//#1
message ServerInputQuery
{
    Base messageID = 1;
    string clientName = 2;
}

//#2
message ServerQueryReply
{
    Base messageID = 1;
    string serverName = 2;
}

//#3
message ClientEnteringRequest
{
    Base messageID = 1;
    string clientName = 2;
    GameSettings gameSettings = 3;
}

//#4
message ClientRoomCreationReply
{
    Base messageID = 1;
    bool created = 2;
    RoomCreationErrors roomCreationErrors = 3;
}

//#5
message ClientConnectionToRoomReply
{
    bool noRoomsAvailable = 1;
    uint32 freeSlotsLeft = 2;
    uint32 roomID = 3;
}
